--- a/text.yaml
+++ b/text.yaml
@@ -1,2 +1,3 @@
 github: https://github.com/Forest1sland
-help : "首先将游戏设置成窗口化拉伸模式，然后在该程序中设置好分辨率,必须为电脑支持的分辨率，点击启动。"
+help: "首先将游戏设置成窗口化拉伸模式，然后在该程序中设置好分辨率,必须为电脑支持的分辨率，点击启动。"
+version: "v1.0"
